--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "turtlecoin-rpc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TurtleCoin RPC API Interface in NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "package": "webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
     "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
-    "standard": "^12.0.1"
+    "standard": "^13.0.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   }
 }
