--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turtlecoin-rpc",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "TurtleCoin RPC API Interface in NodeJS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,7 +18,6 @@
     "style": "./node_modules/.bin/eslint src/**/*.ts src/*.ts test/*.ts",
     "fix-style": "./node_modules/.bin/eslint --fix src/**/*.ts src/*.ts test/*.ts",
     "test": "npm run style && npm run build",
-    "mocha": "./node_modules/.bin/mocha --require ts-node/register test/test.ts",
     "webpack": "./node_modules/.bin/webpack"
   },
   "repository": {
@@ -37,25 +36,19 @@
   },
   "homepage": "https://github.com/turtlecoin/turtlecoin-rpc-js#readme",
   "dependencies": {
-    "abort-controller": "^3.0.0",
-    "big-integer": "^1.6.48",
-    "node-fetch": "^2.6.0",
-    "semver": "^7.3.2"
+    "turtlecoin-utils": "github:turtlecoin/turtlecoin-utils#development"
   },
   "devDependencies": {
-    "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.15",
     "@types/node-fetch": "^2.5.7",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.7.1",
-    "eslint": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^7.2.0",
-    "ts-node": "^8.10.2",
     "typedoc": "^0.17.8",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
